.truth container width and borders based on back-end

--- a/src/global/styles/_truth.css
+++ b/src/global/styles/_truth.css
@@ -9,8 +9,18 @@
 
     .truth__wrap.container,
     .truth__wrap .container {
+        /* Изначально в вёрстке бордюры у контейнера в этом блоке были убраны:
+
         border-left: none;
         border-right: none;
+
+        но на беке сделали правку по их возвращение.
+        Ни то, ни другое, правда, пока не очень понятно зачем сделано.
+        Видимого эффекта нет. Но раз бордюры возвращали на беке, то вернём
+        и в вёрстке. Оставляю их снятие закомментированным.
+
+        Аналогичный фикс есть ниже с закомментированным width: 1060px;
+        */
     }
         .truth__heading {
             margin-top: 0;
@@ -68,7 +78,16 @@
 
         .truth__wrap.container,
         .truth__wrap .container {
-            width: 1060px;
+
+            /* Аналогично ситуации с бордюрами выше, изначально в вёрстке здесь была строка:
+
+             width: 1060px;
+
+             но на беке сделали правку по снятию этой ширины для контейнера.
+             Ни то, ни другое, правда, пока не очень понятно зачем сделано.
+             Видимого эффекта нет. Но раз оригинальную ширину контейнера возвращали на беке,
+             то вернём и в вёрстке. Оставляю это ширины снятие закомментированным.
+             */
         }
             .truth__heading {
 
