--- a/src/global/styles/style.css
+++ b/src/global/styles/style.css
@@ -4,6 +4,7 @@
 @import url("../vendors/magnific-popup/dist/magnific-popup.css");
 @import url("_html.css");
 @import url("_body.css");
+@import url("_browser.css");
 @import url("_button.css");
 @import url("_universal.css");
 @import url("_visuallyhidden.css");
