--- a/src/global/styles/_feature.css
+++ b/src/global/styles/_feature.css
@@ -196,3 +196,50 @@
             margin-left: -11px;
         }
 }
+
+
+
+@media (max-width: 350px) {
+
+    .feature {
+        /*padding: 2px 15px;*/
+        font-size: 14px;
+        line-height: 22px;
+    }
+        .feature__tag {
+            margin-left: 4px;
+            font-size: 11px;
+            line-height: 17px; /* В совокупности с вертикальными паддингами получаем 30px, как line-height у родителя */
+            padding: 3px 6px 2px;
+        }
+
+        .feature__tag:last-child {
+            /*margin-right: -13px;*/
+        }
+
+        .feature__sparkles {
+            /*width: 22px;*/
+            /*height: 22px;*/
+            margin-left: 6px;
+            /*margin-top: 2px;*/
+        }
+
+    .feature--guy {
+
+    }
+        .feature--guy::after {
+            /*left: -38px;*/
+            /*top: 46px;*/
+            /*width: 74px;*/
+            /*height: 80px;*/
+        }
+
+    .feature--girl {
+
+    }
+        .feature--girl::after {
+            /*width: 80px;*/
+            /*height: 60px;*/
+            margin-left: -17px;
+        }
+}
