--- a/src/quotcat.ru/styles/_start.css
+++ b/src/quotcat.ru/styles/_start.css
@@ -4,7 +4,7 @@
 
 @media (min-width: 750px) {
 
-    .start__sub-heading {
+    .start__section:first-child .start__sub-heading {
         margin-left: -10px;
     }
 }
