--- a/src/quotalogic.io/styles/_logo.css
+++ b/src/quotalogic.io/styles/_logo.css
@@ -1,3 +1,25 @@
 .logo {
-
+    width: 225px;
+    background-image: url("../images/logo.svg");
 }
+
+.logo--inverted {
+    background-image: url("../images/logo-inverted.svg");
+}
+
+
+@media ( 1100px <= width < 1500px ), ( 750px <= width < 900px ) {
+
+    .logo {
+        width: 160px;
+    }
+}
+
+
+@media (max-width: 749px) {
+
+    .logo {
+        width: 160px;
+    }
+}
+
