--- a/src/quotcat.ru/styles/styles.css
+++ b/src/quotcat.ru/styles/styles.css
@@ -1,5 +1,7 @@
+/* project fonts */
 @import url("_fonts.css");
 
+/* global code base */
 @import url("../../global/styles/styles.css");
 
 /* overrides */
