--- a/src/global/styles/_basics.css
+++ b/src/global/styles/_basics.css
@@ -71,7 +71,7 @@
            but for now let's just change few backgrounds on macOS
          */
         .macos .basics__tile--omnichanelling {
-            background-color: #BDC6F3;
+            background-color: #C6CCF1;
         }
 
         .iOS .basics__tile--omnichanelling {
